--- a/index.html
+++ b/index.html
@@ -9,13 +9,11 @@
  </head>
 
  <body>
-    <h1>AluraBooks</h1>
-
-
-
-
-
-    
-   </body>
+   
+        <header class="cabeçalho">
+                <span class="cabeçalho__menu-hamburguer"></span>
+                <img src="img/Logo.svg" alt="Logo da AluraBooks">
+            </header>
+    </body>
 
    </html>
