--- a/index.html
+++ b/index.html
@@ -13,7 +13,10 @@
         <header class="cabeçalho">
                 <span class="cabeçalho__menu-hamburguer"></span>
                 <img src="img/Logo.svg" alt="Logo da AluraBooks">
-            </header>
+                <a href="#"><img src="img/Favoritos.svg"></a>
+                <a href="#"><img src="img/Compras.svg"></a>
+                <a href="#"><img src="img/Usuario.svg"></a>
+             </header>
     </body>
 
    </html>
